# typeboard

./: README.md  WEB_AWESOME.md  pyproject.toml
docs/plans/: 2026-02-19-bootstrap-migration-design.md  2026-02-19-bootstrap-migration.md
tests/: test_fields.py  test_forms.py  test_full_flow.py  test_introspection.py  test_pagination.py  test_routing.py  test_site.py
typeboard/: __init__.py  fields.py  introspection.py  pagination.py  rendering.py  resource.py  routing.py  site.py  theme.py
typeboard/templates/: _field.html  _table_rows.html  base.html  detail.html  form.html  index.html  list.html
