[project]
name = "typeboard"
version = "0.1.0"
description = "Type-introspecting admin dashboard framework for FastAPI"
requires-python = "~=3.12.0"

dependencies = [
    "fastapi>=0.100.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
